# todo-tray

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build-macos.sh  build-xcode.sh  justfile  setup-xcode.sh
SwiftApp/: Package.swift  project.yml
SwiftApp/TodoTray/: Info.plist  Package.swift
SwiftApp/TodoTray.xcodeproj/: project.pbxproj
SwiftApp/TodoTray/Sources/: AppDelegate.swift  NotificationManager.swift  StatusBarController.swift  TaskMenuItemView.swift  TodoTrayEventHandler.swift  main.swift
src/: autostart.rs  calendar.rs  config.rs  core.rs  github.rs  icon.rs  lib.rs  linear.rs  main.rs  notification.rs  todoist.rs  tray.rs
todo-tray-core/: Cargo.toml
todo-tray-core/src/: config.rs  core.rs  lib.rs  task.rs  todoist.rs
