[package]
name = "todo-tray-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Todo Tray - shared between platforms via UniFFI"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "todo_tray_core"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
# UniFFI for FFI bindings
uniffi = { version = "0.28", features = ["cli"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde", "clock"] }

# Config directory paths
dirs = "5"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[profile.release]
opt-level = 'z'      # Optimize for size
lto = true           # Enable Link Time Optimization
strip = true         # Strip symbols
panic = "abort"
codegen-units = 1
